--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "date-fns": "^2.19.0",
     "formik": "^2.2.6",
     "history": "^5.0.0",
+    "moralis": "^1.2.4",
     "node-sass": "^6.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -46,6 +47,7 @@
     "react-dom": "^17.0.1",
     "react-images": "^1.1.7",
     "react-lazy-load-image-component": "^1.5.1",
+    "react-moralis": "^1.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
