--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "webbee-js--react-scripts",
-  "author": "maccarian",
-  "email": "hi@maccarianagency.com",
+  "name": "donation-dao",
+  "homepage": ".",
+  "author": "rolandmatheson",
+  "email": "rolandmathesondev@gmail.com",
   "version": "1.1.0",
   "private": true,
   "scripts": {
