--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "aos": "^2.3.4",
     "clsx": "^1.0.4",
     "date-fns": "^2.19.0",
+    "eslint-config-prettier": "^8.3.0",
     "formik": "^2.2.6",
     "history": "^5.0.0",
     "moment": "^2.29.1",
